added the rest of basic controllers and services

--- a/smart-city-parking/src/main/resources/application.properties
+++ b/smart-city-parking/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/smart_parking_system
+spring.datasource.url=jdbc:mysql://localhost:3306/SmartParkingSystem
 spring.datasource.username=smartparking
 spring.datasource.password=5567
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
