--- a/smart-city-parking/pom.xml
+++ b/smart-city-parking/pom.xml
@@ -63,6 +63,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
     	</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -71,6 +76,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+            <configuration>
+                <!-- Set to 'true' to show standard output in the console -->
+                <redirectTestOutputToFile>false</redirectTestOutputToFile>
+            </configuration>
+        </plugin>
 		</plugins>
 	</build>
 
