--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.38",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
-    "@vueuse/core": "^10.7.2",
     "@supabase/supabase-js": "^2.39.3",
-    "tailwindcss": "^3.4.1",
+    "@vueuse/core": "^10.7.2",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35"
+    "axios": "^1.7.9",
+    "pinia": "^2.1.7",
+    "postcss": "^8.4.35",
+    "smart-parking-system": "file:",
+    "tailwindcss": "^3.4.1",
+    "vue": "^3.4.38",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.3",
