--- a/smart-city-parking/pom.xml
+++ b/smart-city-parking/pom.xml
@@ -84,7 +84,18 @@
 			<version>4.0.1</version> 
 			<scope>provided</scope>
 		</dependency>
-
+		<!-- JasperReports Library -->
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.19.1</version> <!-- Use the latest version -->
+		</dependency>
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.30</version>
+    <scope>provided</scope>
+</dependency>
 	</dependencies>
 
 	<build>
